# android-mediasoup-client

./: .gitattributes  .jitpack.yml  build.gradle
gradle/wrapper/: gradle-wrapper.properties
mediasoup-client/: CMakeLists.txt  build.gradle  build.sh
mediasoup-client/src/androidTest/jni/: parameters_jni.cpp
mediasoup-client/src/main/java/org/mediasoup/droid/: MediasoupClient.java  SendTransport.java
mediasoup-client/src/main/java/org/webrtc/: AudioProcessingFactoryImpl.java  RTCUtils.java
mediasoup-client/src/main/jni/: consumer_jni.cpp  device_jni.cpp  java_types.cpp  jni_generator_helper.cpp  jni_onload.cpp  logger_jni.cpp  mediasoup_client_jni.cpp  peerconnection_jni.cpp  producer_jni.cpp  transport_jni.cpp
mediasoup-client/src/main/jni/generated_mediasoupclient_jni/jni/: Consumer_jni.h  Device_jni.h  Logger_jni.h  MediasoupClient_jni.h  Parameters_jni.h  PeerConnection_jni.h  Producer_jni.h  RecvTransport_jni.h  SendTransport_jni.h  Transport_jni.h
mediasoup-client/src/main/jni/include/: common_jni.h  consumer_jni.h  java_types.h  jni_generator_helper.h  producer_jni.h  transport_jni.h
